[package]
name = "cargo-owo"
version = "0.1.0"
authors = ["Breadinator <br3adina7or@gmail.com>"]
edition = "2018"
license = "Unlicense"
license-file = "LICENSE"
readme = "README.md"
description = "br3adina7or's custom program to make a new rust project"
repository = "https://github.com/Breadinator/cargo-owo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
json      = "0.12.4"
colored   = "2.0.0"